# ebc

./: .coveragerc  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.rst  docker-compose.yaml  entrypoint.sh  exploring.ipynb  pyproject.toml  resp.txt  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: 6c20cf6e3717_fixing_model.py  f9fab8a0b3ae_first.py
docs/: conf.py  index.rst
frontend/: Dockerfile  nginx.conf  package.json
frontend/nginx/: certificate.crt  default.conf  nginx.conf  private.key
frontend/public/: index.html
frontend/src/components/: ChartComponent.js  Dashboard.css  Dashboard.js  SummaryStats.css  SummaryStats.js
init-db/: create_databases.sh
src/ebc/: __init__.py  skeleton.py
src/ebc/api/: app.py
src/ebc/core/: staking.py  totals.py
src/ebc/crud/: crud_main_table.py
src/ebc/db/: config.py  connection.py  dependencies.py
src/ebc/models/: base_model.py  main_model.py
src/ebc/routes/: main_table_router.py
src/ebc/scheduler/: task.py
src/ebc/schemas/: main_table_schema.py
src/ebc/utils/: constants.py  scraping.py
tests/: conftest.py  test_skeleton.py
