[metadata]
name = epicballad
description = .
author = ASRodrigo1
author_email = rodrigodealmeida00@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/ASRodrigo1/ebc

# project_urls =
#     Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.12

install_requires =
    importlib-metadata; python_version<"3.8"
    fastapi>=0.115.0
    pydantic>=2.9.2
    pydantic-extra-types>=2.9.0
    sqlalchemy>=2.0.35
    alembic>=1.13.3
    asyncpg>=0.29.0
    psycopg2-binary>=2.9.9
    httpx>=0.27.2
    uvicorn>=0.31.0
    gunicorn>=23.0.0
    passlib>=1.7.4
    argon2_cffi>=23.1.0
    authlib>=1.3.2
    python-decouple>=3.8
    apscheduler>=3.11.0
    bs4>=0.0.2
    requests>=2.23.3
    #pendulum>=3.0.0


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest>=8.3.3
    pytest-cov>=5.0.0
    pytest-sqlalchemy>=0.2.1
    pytest-asyncio>=0.24.0
    pytest-mock>=3.14.0

dev =
    pre-commit>=3.8.0
    flake8>=7.1.1
    black>=24.8.0
    isort>=5.13.2

vis =
    eralchemy>=1.5.0
    pygraphviz>=1.14

all =
    %(testing)s
    %(dev)s
    %(vis)s

[tool:pytest]
addopts =
    --cov ebc --cov-report term-missing --cov-report html:htmlcov
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    reports

[codespell]
skip =
    reports/*
    **/*.ipynb

[pyscaffold]
version = 4.6
package = ebc
extensions =
    github_actions
    pre_commit
